Fixed td vertical alignment

--- a/web/css/serve.css
+++ b/web/css/serve.css
@@ -24,11 +24,14 @@ td {
     white-space: nowrap;
 }
 
-
 #sticky-footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     height: 40px;
+}
+
+.table > tbody > tr > td {
+    vertical-align: middle;
 }
